--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DevMag",
+  "name": "react-note-app",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -20,6 +20,7 @@
     "node-jsx": "^0.11.0",
     "react": "^0.11.2",
     "reflux": "^0.1.13",
+    "es5-shim": "*",
     "serve-favicon": "~2.1.3"
   },
   "devDependencies": {
