--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
 		"grunt-contrib-watch": "^0.6.1",
 		"grunt-nodemon": "^0.3.0",
 		"grunt-react": "^0.9.0",
+		"matchdep":"*",
+		"grunt-contrib-uglify": "*",
+		"grunt-contrib-concat": "*",
+		"grunt-contrib-copy": "*",
+		"grunt-contrib-clean": "*",
 		"react-tools": "^0.11.2"
 	}
 }
