--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"grunt-react": "^0.9.0",
 		"matchdep":"*",
 		"grunt-contrib-uglify": "*",
-		"grunt-contrib-jshint": "*",
+		"grunt-contrib-jshint-jsx": "*",
 		"grunt-contrib-concat": "*",
 		"grunt-contrib-copy": "*",
 		"grunt-contrib-clean": "*",
