--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
 		"grunt-nodemon": "^0.3.0",
 		"grunt-react": "^0.9.0",
 		"matchdep":"*",
+		"eslint":"*",
+		"grunt-eslint":"*",
+		"eslint-tap":"*",
+		"eslint-plugin-react":"*",
 		"grunt-contrib-uglify": "*",
-		"grunt-contrib-jshint-jsx": "*",
 		"grunt-contrib-concat": "*",
 		"grunt-contrib-copy": "*",
 		"grunt-contrib-clean": "*",
