--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"grunt-contrib-watch": "^0.6.1",
 		"grunt-nodemon": "^0.3.0",
 		"grunt-react": "^0.9.0",
+		"reactify":"*",
 		"matchdep":"*",
 		"eslint":"*",
 		"grunt-eslint":"*",
