--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
 		"ejs": "~0.8.5",
 		"express": "~4.9.0",
 		"express-session": "^1.8.2",
+		"serve-favicon": "~2.1.3",
 		"morgan": "~1.3.0",
-		"node-jsx": "^0.13.3",
-		"react": "^0.13.3",
-		"reflux": "^0.2.9",
+		"node-jsx": "0.13.3",
+		"react": "0.13.3",
+		"reflux": "0.2.9",
 		"es5-shim": "*",
-		"console-polyfill": "*",
-		"serve-favicon": "~2.1.3"
+		"console-polyfill": "*"
 	},
 	"devDependencies": {
 		"grunt": "^0.4.5",
-		"grunt-browserify": "^3.0.1",
+		"grunt-browserify": "3.8.0",
 		"grunt-contrib-watch": "^0.6.1",
-		"grunt-nodemon": "^0.3.0",
-		"grunt-react": "^0.9.0",
+		"grunt-nodemon": "0.4.0",
+		"grunt-react": "0.12.2",
 		"reactify": "*",
 		"matchdep": "*",
 		"eslint": "*",
@@ -39,6 +39,6 @@
 		"grunt-contrib-concat": "*",
 		"grunt-contrib-copy": "*",
 		"grunt-contrib-clean": "*",
-		"react-tools": "^0.13.3"
+		"react-tools": "*"
 	}
 }
