--- a/package.json
+++ b/package.json
@@ -1,44 +1,55 @@
 {
-	"name": "react-note-app",
-	"version": "0.0.0",
-	"private": true,
-	"scripts": {
-		"start": "node ./bin/www",
-		"main": "./bin/www"
-	},
-	"engines": {
-		"node": ">= 0.10.0"
-	},
-	"dependencies": {
-		"body-parser": "~1.8.1",
-		"cookie-parser": "~1.3.3",
-		"debug": "~2.0.0",
-		"ejs": "~0.8.5",
-		"express": "~4.9.0",
-		"express-session": "^1.8.2",
-		"serve-favicon": "~2.1.3",
-		"morgan": "~1.3.0",
-		"node-jsx": "0.13.3",
-		"react": "0.13.3",
-		"reflux": "0.2.9",
-		"es5-shim": "*",
-		"console-polyfill": "*"
-	},
-	"devDependencies": {
-		"grunt": "^0.4.5",
-		"grunt-browserify": "3.8.0",
-		"grunt-contrib-watch": "^0.6.1",
-		"grunt-nodemon": "0.4.0",
-		"grunt-react": "0.12.2",
-		"reactify": "*",
-		"matchdep": "*",
-		"eslint": "*",
-		"grunt-eslint": "*",
-		"eslint-plugin-react": "*",
-		"grunt-contrib-uglify": "*",
-		"grunt-contrib-concat": "*",
-		"grunt-contrib-copy": "*",
-		"grunt-contrib-clean": "*",
-		"react-tools": "*"
-	}
+    "name": "react-note-app",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www",
+        "main": "./bin/www"
+    },
+    "engines": {
+        "node": ">= 0.10.0"
+    },
+    "dependencies": {
+        "body-parser": "~1.8.1",
+        "cookie-parser": "~1.3.3",
+        "debug": "~2.0.0",
+        "ejs": "~0.8.5",
+        "express": "~4.9.0",
+        "express-session": "^1.8.2",
+        "serve-favicon": "~2.1.3",
+        "morgan": "~1.3.0",
+        "node-jsx": "0.13.3",
+        "react": "0.13.3",
+        "reflux": "0.2.9",
+        "es5-shim": "*",
+        "console-polyfill": "*"
+    },
+    "devDependencies": {
+        "grunt": "^0.4.5",
+        "grunt-browserify": "3.8.0",
+        "uglify-js": "~2.4.23",
+        "browserify-shim": "~3.8.9",
+        "grunt-contrib-watch": "^0.6.1",
+        "grunt-nodemon": "0.4.0",
+        "grunt-react": "0.12.2",
+        "reactify": "*",
+        "matchdep": "*",
+        "eslint": "*",
+        "grunt-eslint": "*",
+        "eslint-plugin-react": "*",
+        "grunt-contrib-uglify": "*",
+        "grunt-contrib-concat": "*",
+        "grunt-contrib-copy": "*",
+        "grunt-contrib-clean": "*",
+        "react-tools": "*"
+    },
+    "browserify-shim": {
+        "jquery": {
+            "exports": "$"
+        },
+        "bootstrap": {
+            "exports": "bootstrap",
+            "depends": ["jquery:$"]
+        }
+    }
 }
