--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "devDependencies": {
         "grunt": "^0.4.5",
+        "browserify": "~10.2.6",
         "grunt-browserify": "3.8.0",
         "uglify-js": "~2.4.23",
         "browserify-shim": "~3.8.9",
@@ -42,6 +43,11 @@
         "grunt-contrib-copy": "*",
         "grunt-contrib-clean": "*",
         "react-tools": "*"
+    },
+    "browserify": {
+        "transform": [
+          "browserify-shim"
+        ]
     },
     "browserify-shim": {
         "jquery": {
