--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,8 @@
 	"env": {
 	    "browser": true,
 	    "es6": true,
-	    "mocha": true
+	    "mocha": true,
+	    "node": true
 	},
 	"rules": {
 		// babel-eslint
