--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "serve-favicon": "~2.1.3",
         "morgan": "~1.3.0",
         "node-jsx": "0.13.3",
-        "react": "0.13.3",
+        "react": "^0.13.3",
+        "react-router": "^0.13.3",
+        "react-router-express": "^1.0.0",
         "reflux": "0.2.9",
         "es5-shim": "*",
         "console-polyfill": "*"
