--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "morgan": "~1.3.0",
         "node-jsx": "0.13.3",
         "react": "^0.13.3",
+        "react-async":"~2.1.0",
         "react-router": "^0.13.3",
         "react-router-express": "^1.0.0",
         "reflux": "0.2.9",
